--- a/projects/helsa/nsp_ui.html
+++ b/projects/helsa/nsp_ui.html
@@ -208,18 +208,18 @@
             box-sizing: border-box;
         }
         .ribbon {
-            background-color: #007bff;
-            color: white;
-            padding: 8px;
-            border-radius: 3px;
-            cursor: pointer;
-            text-align: center;
-            font-size: 0.9em;
-            transition: background-color 0.3s ease;
-        }
-        .ribbon:hover {
-            background-color: #0056b3;
-        }
+    background-color: #808080; /* Grey to match file input buttons */
+    color: white;
+    padding: 8px;
+    border-radius: 3px;
+    cursor: pointer;
+    text-align: center;
+    font-size: 0.9em;
+    transition: background-color 0.3s ease;
+}
+.ribbon:hover {
+    background-color: #6b6b6b; /* Darker grey for hover effect */
+}
         .date-input {
             width: 100%;
             padding: 8px;
