--- a/projects/helsa/nsp_ui.html
+++ b/projects/helsa/nsp_ui.html
@@ -201,13 +201,14 @@
             text-align: center;
         }
         /* Ribbon Wrapper and Styling */
-        .ribbon-wrapper {
-            position: relative;
-            flex-grow: 1;
-            min-width: 100px;
-            box-sizing: border-box;
-        }
-        .ribbon {
+.ribbon-wrapper {
+    position: relative;
+    min-width: 100px; /* Keep minimum width for smaller screens */
+    max-width: 200px; /* Set a maximum width to prevent stretching */
+    width: auto; /* Allow natural width based on content */
+    box-sizing: border-box;
+}
+.ribbon {
     background-color: #808080; /* Grey to match file input buttons */
     color: white;
     padding: 8px;
@@ -216,6 +217,11 @@
     text-align: center;
     font-size: 0.9em;
     transition: background-color 0.3s ease;
+    width: 100%; /* Ensure ribbon takes full width of ribbon-wrapper */
+    box-sizing: border-box;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis; /* Truncates long file names with "..." */
 }
 .ribbon:hover {
     background-color: #6b6b6b; /* Darker grey for hover effect */
