--- a/projects/helsa/nsp_ui.html
+++ b/projects/helsa/nsp_ui.html
@@ -164,10 +164,12 @@
             margin-top: 10px;
         }
         .upload-label {
-            font-weight: bold;
-            margin-bottom: 5px;
-            display: block;
-        }
+    flex-shrink: 0;
+    width: 200px;
+    text-align: left;
+    font-size: 0.9em;
+    font-weight: bold;
+}
         #templates {
             margin-top: 20px;
             padding: 15px;
@@ -203,13 +205,13 @@
         /* Ribbon Wrapper and Styling */
 .ribbon-wrapper {
     position: relative;
-    min-width: 100px; /* Keep minimum width for smaller screens */
-    max-width: 200px; /* Set a maximum width to prevent stretching */
-    width: auto; /* Allow natural width based on content */
+    min-width: 100px;
+    max-width: 200px;
+    width: auto;
     box-sizing: border-box;
 }
 .ribbon {
-    background-color: #808080; /* Grey to match file input buttons */
+    background-color: #808080;
     color: white;
     padding: 8px;
     border-radius: 3px;
@@ -217,11 +219,11 @@
     text-align: center;
     font-size: 0.9em;
     transition: background-color 0.3s ease;
-    width: 100%; /* Ensure ribbon takes full width of ribbon-wrapper */
+    width: 100%;
     box-sizing: border-box;
     white-space: nowrap;
     overflow: hidden;
-    text-overflow: ellipsis; /* Truncates long file names with "..." */
+    text-overflow: ellipsis;
 }
 .ribbon:hover {
     background-color: #6b6b6b; /* Darker grey for hover effect */
