--- a/projects/helsa/nsp_ui.html
+++ b/projects/helsa/nsp_ui.html
@@ -201,31 +201,31 @@
             text-align: center;
         }
         /* Ribbon Wrapper and Styling */
-.ribbon-wrapper {
-    position: relative;
-    min-width: 100px; /* Keep minimum width for smaller screens */
-    max-width: 200px; /* Set a maximum width to prevent stretching */
-    width: auto; /* Allow natural width based on content */
-    box-sizing: border-box;
-}
-.ribbon {
-    background-color: #808080; /* Grey to match file input buttons */
-    color: white;
-    padding: 8px;
-    border-radius: 3px;
-    cursor: pointer;
-    text-align: center;
-    font-size: 0.9em;
-    transition: background-color 0.3s ease;
-    width: 100%; /* Ensure ribbon takes full width of ribbon-wrapper */
-    box-sizing: border-box;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis; /* Truncates long file names with "..." */
-}
-.ribbon:hover {
-    background-color: #6b6b6b; /* Darker grey for hover effect */
-}
+        .ribbon-wrapper {
+            position: relative;
+            min-width: 100px; /* Keep minimum width for smaller screens */
+            max-width: 200px; /* Set a maximum width to prevent stretching */
+            width: auto; /* Allow natural width based on content */
+            box-sizing: border-box;
+        }
+        .ribbon {
+            background-color: #808080; /* Grey to match file input buttons */
+            color: white;
+            padding: 8px;
+            border-radius: 3px;
+            cursor: pointer;
+            text-align: center;
+            font-size: 0.9em;
+            transition: background-color 0.3s ease;
+            width: 100%; /* Ensure ribbon takes full width of ribbon-wrapper */
+            box-sizing: border-box;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis; /* Truncates long file names with "..." */
+        }
+        .ribbon:hover {
+            background-color: #6b6b6b; /* Darker grey for hover effect */
+        }
         .date-input {
             width: 100%;
             padding: 8px;
@@ -304,24 +304,24 @@
     </div>
 
     <div class="input-section">
-    <h2>File Upload</h2>
-    <p class="note">Leave blank if using manual input.</p>
-    <label for="nursesFile" class="upload-label">Upload Nurses Data (CSV):</label>
-    <div class="ribbon-wrapper">
-        <div class="ribbon" onclick="triggerFileInput('nursesFile')">Choose File</div>
-        <input type="file" id="nursesFile" accept=".csv" style="display: none;">
+        <h2>File Upload</h2>
+        <p class="note">Leave blank if using manual input.</p>
+        <label for="nursesFile" class="upload-label">Upload Nurses Data (CSV):</label>
+        <div class="ribbon-wrapper">
+            <div class="ribbon" onclick="triggerFileInput('nursesFile')">Choose File</div>
+            <input type="file" id="nursesFile" accept=".csv" style="display: none;">
+        </div>
+        <label for="requirementsFile" class="upload-label">Upload Requirements Data (CSV):</label>
+        <div class="ribbon-wrapper">
+            <div class="ribbon" onclick="triggerFileInput('requirementsFile')">Choose File</div>
+            <input type="file" id="requirementsFile" accept=".csv" style="display: none;">
+        </div>
+        <label for="preferencesFile" class="upload-label">Upload Preferences Data (CSV):</label>
+        <div class="ribbon-wrapper">
+            <div class="ribbon" onclick="triggerFileInput('preferencesFile')">Choose File</div>
+            <input type="file" id="preferencesFile" accept=".csv" style="display: none;">
+        </div>
     </div>
-    <label for="requirementsFile" class="upload-label">Upload Requirements Data (CSV):</label>
-    <div class="ribbon-wrapper">
-        <div class="ribbon" onclick="triggerFileInput('requirementsFile')">Choose File</div>
-        <input type="file" id="requirementsFile" accept=".csv" style="display: none;">
-    </div>
-    <label for="preferencesFile" class="upload-label">Upload Preferences Data (CSV):</label>
-    <div class="ribbon-wrapper">
-        <div class="ribbon" onclick="triggerFileInput('preferencesFile')">Choose File</div>
-        <input type="file" id="preferencesFile" accept=".csv" style="display: none;">
-    </div>
-</div>
 
     <div class="input-section">
         <h2>Manual Input</h2>
@@ -488,11 +488,11 @@
             newInputLine.innerHTML = `
                 <label>Requirement:</label>
                 <div class="ribbon-wrapper">
-                    <div class="ribbon" onclick="toggleDateInput(this)">Enter Start Date</div>
+                    <div class="ribbon" onclick="toggleDateInput(this)">${formatDateToMMDDYYYY(inputs[0].value)}</div>
                     <input type="date" data-input-type="req_start_date" class="date-input" style="display: none;" readonly>
                 </div>
                 <div class="ribbon-wrapper">
-                    <div class="ribbon" onclick="toggleDateInput(this)">Enter End Date</div>
+                    <div class="ribbon" onclick="toggleDateInput(this)">${formatDateToMMDDYYYY(inputs[1].value)}</div>
                     <input type="date" data-input-type="req_end_date" class="date-input" style="display: none;" readonly>
                 </div>
                 <input type="number" placeholder="Shift (1/2/3)" data-input-type="req_shift" min="1" max="3" readonly>
@@ -515,6 +515,7 @@
             const wrappers = requirementsInput.querySelector('.input-line:not(.entered-item)').querySelectorAll('.ribbon-wrapper');
             wrappers.forEach(wrapper => {
                 wrapper.querySelector('.ribbon').style.display = 'block';
+                wrapper.querySelector('.ribbon').textContent = wrapper.querySelector('.date-input').dataset.inputType.includes('start') ? 'Enter Start Date' : 'Enter End Date';
                 wrapper.querySelector('.date-input').style.display = 'none';
             });
         }
@@ -535,7 +536,7 @@
                 <input type="text" placeholder="Nurse ID" data-input-type="pref_nurse_id" readonly>
                 <input type="number" placeholder="Shift (1/2/3)" data-input-type="pref_shift" min="1" max="3" readonly>
                 <div class="ribbon-wrapper">
-                    <div class="ribbon" onclick="toggleDateInput(this)">Enter Date</div>
+                    <div class="ribbon" onclick="toggleDateInput(this)">${formatDateToMMDDYYYY(inputs[2].value)}</div>
                     <input type="date" data-input-type="pref_date" class="date-input" style="display: none;" readonly>
                 </div>
                 <input type="number" placeholder="Preference Level (0-10)" data-input-type="pref_level" min="0" max="10" readonly>
@@ -552,6 +553,7 @@
             // Reset ribbon to visible and hide date input
             const wrapper = preferencesInput.querySelector('.input-line:not(.entered-item)').querySelector('.ribbon-wrapper');
             wrapper.querySelector('.ribbon').style.display = 'block';
+            wrapper.querySelector('.ribbon').textContent = 'Enter Date';
             wrapper.querySelector('.date-input').style.display = 'none';
         }
 
@@ -591,10 +593,12 @@
                 }
             }
             inputs.forEach(input => input.setAttribute('readonly', 'true'));
-            // Show ribbons and hide date inputs after saving
+            // Show ribbons and update their text with selected dates
             inputLine.querySelectorAll('.ribbon-wrapper').forEach(wrapper => {
+                const dateInput = wrapper.querySelector('.date-input');
+                wrapper.querySelector('.ribbon').textContent = dateInput.value ? formatDateToMMDDYYYY(dateInput.value) : (dateInput.dataset.inputType.includes('start') ? 'Enter Start Date' : 'Enter End Date');
                 wrapper.querySelector('.ribbon').style.display = 'block';
-                wrapper.querySelector('.date-input').style.display = 'none';
+                dateInput.style.display = 'none';
             });
             button.textContent = 'Edit';
             button.onclick = () => editInput(button);
@@ -822,17 +826,26 @@
             }
         }
 
-    function triggerFileInput(inputId) {
-    const fileInput = document.getElementById(inputId);
-    fileInput.click();
-}
-        // Add this to your <script> section
-document.querySelectorAll('input[type="file"]').forEach(input => {
-    input.addEventListener('change', function() {
-        const ribbon = this.parentElement.querySelector('.ribbon');
-        ribbon.textContent = this.files.length > 0 ? this.files[0].name : 'Choose File';
-    });
-});
+        function triggerFileInput(inputId) {
+            const fileInput = document.getElementById(inputId);
+            fileInput.click();
+        }
+
+        // Update ribbon text for file inputs
+        document.querySelectorAll('input[type="file"]').forEach(input => {
+            input.addEventListener('change', function() {
+                const ribbon = this.parentElement.querySelector('.ribbon');
+                ribbon.textContent = this.files.length > 0 ? this.files[0].name : 'Choose File';
+            });
+        });
+
+        // Update ribbon text when a date is selected
+        document.querySelectorAll('.date-input').forEach(input => {
+            input.addEventListener('change', function() {
+                const ribbon = this.parentElement.querySelector('.ribbon');
+                ribbon.textContent = this.value ? formatDateToMMDDYYYY(this.value) : (this.dataset.inputType.includes('start') ? 'Enter Start Date' : this.dataset.inputType.includes('end') ? 'Enter End Date' : 'Enter Date');
+            });
+        });
     </script>
 </body>
 </html>
