--- a/research.html
+++ b/research.html
@@ -85,7 +85,7 @@
       <p>We study a two-echelon supply chain with a central distribution center and two suppliers with different levels of unreliability. The goal is to decide the optimal ordering proportions from each supplier under uncertainty. The problem is modeled as a discrete-time Markov Decision Process and solved exactly for a finite time horizon. Our contribution includes a new Markov Chain with three states to better capture the unreliable supplier’s behavior.</p>
       <div class="links">
         <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4833769" target="_blank">View on SSRN</a> |
-        <a href="https://shorturl.at/q62mp" target="_blank">View Farsi Version on Sharif University's E-Library</a>
+        <a href="https://library.sharif.ir/parvan/resource/493867/%DB%8C%DA%A9-%D9%85%D8%AF%D9%84-%D9%81%D8%B1%D8%A7%DB%8C%D9%86%D8%AF%D9%87%D8%A7%DB%8C-%D8%AA%D8%B5%D9%85%DB%8C%D9%85%E2%80%8C%DA%AF%DB%8C%D8%B1%DB%8C-%D9%85%D8%A7%D8%B1%DA%A9%D9%88%D9%81-%D8%A8%D8%B1%D8%A7%DB%8C-%D8%A7%D9%86%D8%AA%D8%AE%D8%A7%D8%A8-%D8%AA%D8%A7%D9%85%DB%8C%D9%86%E2%80%8C%DA%A9%D9%86%D9%86%D8%AF%D9%87-%D8%AF%D8%B1-%D9%85%D8%AF%DB%8C%D8%B1%DB%8C%D8%AA-%D8%B2%D9%86%D8%AC%DB%8C%D8%B1%D9%87-%D8%AA%D8%A7%D9%85%DB%8C%D9%86-%D8%AA%D8%AD%D8%AA-%D8%B4%D8%B1%D8%A7%DB%8C%D8%B7-%D8%AA%D8%B5%D8%A7%D8%AF%D9%81%DB%8C/&from=search&&query=%D8%AD%D8%A7%D9%85%D8%AF%20%D9%85%DB%8C%D9%84%D8%A7%D9%86%DB%8C&count=20&execute=true" target="_blank">View Farsi Version on Sharif University's E-Library</a>
       </div>
     </div>
 
