--- a/projects/helsa/nsp_ui.html
+++ b/projects/helsa/nsp_ui.html
@@ -340,7 +340,7 @@
 
             <div id="requirements-input">
                 <h3>Shift Requirements</h3>
-                <p class="note">Specify start date, end date, shift (1: Morning, 2: Evening, 3: Night), nurse type (0 for all, 1 for senior), minimum and maximum required nurses. To define single-day requirements, please set the start and end dates to the same day.</p>
+                <p class="note">Specify start date, end date, shift (1: Morning, 2: Evening, 3: Night), nurse type (1 for normal, 2 for senior), minimum and maximum required nurses. To define single-day requirements, please set the start and end dates to the same day.</p>
                 <div class="input-line">
                     <label>Requirement:</label>
                     <div class="ribbon-wrapper">
@@ -352,7 +352,7 @@
                         <input type="date" data-input-type="req_end_date" class="date-input" style="display: none;">
                     </div>
                     <input type="number" placeholder="Shift (1/2/3)" data-input-type="req_shift" min="1" max="3">
-                    <input type="number" placeholder="Nurse Type (0/1)" data-input-type="req_nurse_type" min="0" max="1">
+                    <input type="number" placeholder="Nurse Type (1/2)" data-input-type="req_nurse_type" min="1" max="2">
                     <input type="number" placeholder="Min Req" data-input-type="req_min" min="0">
                     <input type="number" placeholder="Max Req" data-input-type="req_max" min="0">
                 </div>
@@ -496,7 +496,7 @@
                 <input type="date" data-input-type="req_end_date" class="date-input" style="display: none;" readonly>
             </div>
             <input type="number" placeholder="Shift (1/2/3)" data-input-type="req_shift" min="1" max="3" readonly>
-            <input type="number" placeholder="Nurse Type (0/1)" data-input-type="req_nurse_type" min="0" max="1" readonly>
+            <input type="number" placeholder="Nurse Type (1/2)" data-input-type="req_nurse_type" min="1" max="2" readonly>
             <input type="number" placeholder="Min Req" data-input-type="req_min" min="0" readonly>
             <input type="number" placeholder="Max Req" data-input-type="req_max" min="0" readonly>
             <button type="button" class="action-button edit-button" onclick="editInput(this)">Edit</button>
